# SmartLight-IoT

./: README.md
.github/workflows/: build_test.yml
docs/: C_Unit_Tests.md  Getting_Started.md
firmware/: .gitignore  CMakeLists.txt
firmware/Core/: CMakeLists.txt
firmware/Core/Inc/: IO.h  function_arg_helpers.h  main.h  pwm.h  rgb.h
firmware/Core/Inc/config/: device_config.h
firmware/Core/Inc/unit_tests/: unit_test_executor.h  unit_test_function_arg_helpers.h  unit_test_helpers.h  unit_test_inventory.h  unit_test_pwm.h  unit_test_rgb.h
firmware/Core/Src/: IO.c  function_arg_helpers.c  main.c  pwm.c  rgb.c
firmware/Core/Src/unit_tests/: unit_test_executor.c  unit_test_function_arg_helpers.c  unit_test_inventory.c  unit_test_pwm.c  unit_test_rgb.c
